# Particus

./: .gitignore  CMakeLists.txt  makefile  readme.md
cmake/modules/: FindWiringPi.cmake  Findpigpio.cmake
include/: accelerometer_controller.h  boundary.h  button_controller.h  configuration.h  display_controller.h  lit_pixel.h  particle.h  particle_controller.h  program_controller.h  time_master.h  vector_2.h
src/: accelerometer_controller.cpp  button_controller.cpp  display_controller.cpp  particle.cpp  particle_controller.cpp  particus.cpp  program_controller.cpp  vector_2.cpp
